Fixed: the form feedback was overlapsed by the home navbar

--- a/client/app/views/styles/application.styl
+++ b/client/app/views/styles/application.styl
@@ -104,6 +104,7 @@ input[type="time"]
     text-shadow: none
 
 #add-alarm
+    margin-top: 20px
     input
     select
         border: 1px solid lightgrey
